Edited BrukerLoggbok, endringslogg and PoengVelger

--- a/client_code/BrukerLoggbok/form_template.yaml
+++ b/client_code/BrukerLoggbok/form_template.yaml
@@ -35,7 +35,43 @@ components:
         spacing:
           margin: ['0', null, '0', null]
       type: FlowPanel
-    layout_properties: {grid_position: 'WFKNPD,TTQPQG'}
+    - components:
+      - event_bindings: {}
+        layout_properties: {width: 30}
+        name: badge_1
+        properties: {height: '30', source: _/theme/icons8-three-leaf-clover-48.png, tooltip: Trippel Aktiv, visible: false}
+        type: Image
+      - event_bindings: {}
+        layout_properties: {width: 30}
+        name: badge_2
+        properties: {height: '30', source: _/theme/icons8-777-48.png, tooltip: Seventh heaven, visible: false}
+        type: Image
+      - event_bindings: {}
+        layout_properties: {width: 30}
+        name: badge_3
+        properties: {height: '30', source: _/theme/icons8-triathlon-64.png, tooltip: Triathlon, visible: false}
+        type: Image
+      - layout_properties: {width: 30}
+        name: badge_4
+        properties: {height: '30', source: _/theme/icons8-habit-64.png, tooltip: Habit Master, visible: false}
+        type: Image
+      - layout_properties: {width: 30}
+        name: badge_5
+        properties: {height: '30', source: _/theme/icons8-habit-64 (1).png, tooltip: Habit God, visible: false}
+        type: Image
+      - layout_properties: {width: 30}
+        name: image_6
+        properties: {height: '30', source: _/theme/grey badge.png, tooltip: '', visible: false}
+        type: Image
+      - layout_properties: {width: 30}
+        name: image_7
+        properties: {height: '30', source: _/theme/grey badge.png, tooltip: '', visible: false}
+        type: Image
+      layout_properties: {grid_position: 'VAYYHW,KDSGPP'}
+      name: badge_flow_panel
+      properties: {align: center, visible: false}
+      type: FlowPanel
+    layout_properties: {grid_position: 'ECQRON,FTEFSQ'}
     name: outlined_card_2
     properties:
       background: theme:Secondary Container
