--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -103,7 +103,7 @@ components:
         resultatliste for team bør ta hensyn til teamets lengste streak
         Flere badges
         Vise badges på resultatlister og på kikk-bildet
-        Kikkbildet må oppdateres emd nye endringer i hovedbildet
+        Kikkbildet må oppdateres med nye endringer i hovedbildet
         Legge til Ligaer
         sjekk_badge_4 feiler
 
