--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -30,15 +30,21 @@ components:
         type: ColumnPanel
       - components:
         - components:
-          - layout_properties: {}
-            name: label_1
-            properties: {text: Lengde på treningsøkt}
-            type: Label
-          - data_bindings:
-            - {code: '', property: items, writeback: false}
-            name: poeng_drop
+          - components:
+            - layout_properties: {grid_position: 'RKEJMH,KFHEJC'}
+              name: label_1
+              properties: {text: Lengde på treningsøkt}
+              type: Label
+            - data_bindings:
+              - {code: '', property: items, writeback: false}
+              layout_properties: {grid_position: 'HWYDVE,DMAWYC'}
+              name: poeng_drop
+              properties: {}
+              type: DropDown
+            layout_properties: {width: 166}
+            name: column_panel_3
             properties: {}
-            type: DropDown
+            type: ColumnPanel
           - components:
             - event_bindings: {mouse_down: ikon_preview_click}
               layout_properties: {grid_position: 'VJBWVC,KSQHVW'}
