Edited Resultat_individuell and Resultat_individuell.RowTemplate2

--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -7,9 +7,9 @@ components:
       padding: ['2', null, '2', null]
   type: Label
 - components:
-  - event_bindings: {click: button_1_click}
+  - event_bindings: {click: kikk_click}
     layout_properties: {}
-    name: button_1
+    name: kikk
     properties:
       align: left
       icon: fa:eye
@@ -51,39 +51,39 @@ components:
   type: Label
 - components:
   - event_bindings: {}
-    layout_properties: {width: 30}
+    layout_properties: {width: 19.5}
     name: badge_1
-    properties: {height: '30', source: _/theme/icons8-three-leaf-clover-48.png, tooltip: Trippel Aktiv, visible: false}
+    properties: {height: '20', source: _/theme/icons8-three-leaf-clover-48.png, tooltip: Trippel Aktiv, visible: false}
     type: Image
   - event_bindings: {}
-    layout_properties: {width: 30}
+    layout_properties: {width: 17.5}
     name: badge_2
-    properties: {height: '30', source: _/theme/icons8-777-48.png, tooltip: Seventh heaven, visible: false}
+    properties: {height: '20', source: _/theme/icons8-777-48.png, tooltip: Seventh heaven, visible: false}
     type: Image
   - event_bindings: {}
-    layout_properties: {width: 30}
+    layout_properties: {width: 21}
     name: badge_3
-    properties: {height: '30', source: _/theme/icons8-triathlon-64.png, tooltip: Triathlon, visible: false}
+    properties: {height: '20', source: _/theme/icons8-triathlon-64.png, tooltip: Triathlon, visible: false}
     type: Image
-  - layout_properties: {width: 30}
+  - layout_properties: {width: 20}
     name: badge_4
-    properties: {height: '30', source: _/theme/icons8-habit-64.png, tooltip: Habit Master, visible: false}
+    properties: {height: '20', source: _/theme/icons8-habit-64.png, tooltip: Habit Master, visible: false}
     type: Image
-  - layout_properties: {width: 30}
+  - layout_properties: {width: 20}
     name: badge_5
-    properties: {height: '30', source: _/theme/icons8-habit-64 (1).png, tooltip: Habit God, visible: false}
+    properties: {height: '20', source: _/theme/icons8-habit-64 (1).png, tooltip: Habit God, visible: false}
     type: Image
-  - layout_properties: {width: 30}
+  - layout_properties: {width: 16.5}
     name: image_6
-    properties: {height: '30', source: _/theme/grey badge.png, tooltip: '', visible: false}
+    properties: {height: '20', source: _/theme/grey badge.png, tooltip: '', visible: false}
     type: Image
-  - layout_properties: {width: 30}
+  - layout_properties: {width: 19}
     name: image_7
-    properties: {height: '30', source: _/theme/grey badge.png, tooltip: '', visible: false}
+    properties: {height: '20', source: _/theme/grey badge.png, tooltip: '', visible: false}
     type: Image
   layout_properties: {column: PFFFKV}
   name: badge_flow_panel
-  properties: {align: center, visible: false}
+  properties: {align: left, visible: true}
   type: FlowPanel
 container:
   properties:
