--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -9,22 +9,17 @@ components:
       - components:
         - components:
           - layout_properties: {}
-            name: label_3
-            properties: {text: 'Antall skritt:'}
+            name: image_1
+            properties: {height: 41.5, source: _/theme/icons8-walk-80.png}
+            type: Image
+          - name: label_5
+            properties: {align: center, font_size: 12, text: '8000 skritt, eller flere, gir 1 poeng. Du må ha minst 1 poeng i fem dager for å delta i ukens trekning.'}
             type: Label
-          - layout_properties: {width: 100.5714111328125}
-            name: antall_skritt
-            properties: {}
-            type: TextBox
-          layout_properties: {grid_position: 'OMVZCP,VVKYRL'}
-          name: skritt_panel_flow1
-          properties: {align: center}
+          layout_properties: {grid_position: 'HRHEEE,JTQHYJ'}
+          name: flow_panel_3
+          properties: {}
           type: FlowPanel
-        - layout_properties: {grid_position: 'XFFVEH,NQYPTH'}
-          name: label_5
-          properties: {align: center, font_size: 8, text: '8000 skritt, eller flere, gir 1 poeng. Du må ha minst 1 poeng i fem dager for å delta i ukens trekning.'}
-          type: Label
-        layout_properties: {grid_position: 'ZJIUIQ,WSAHEQ'}
+        layout_properties: {grid_position: 'JLRANF,QMOXES'}
         name: skritt_panel_1
         properties: {}
         type: ColumnPanel
@@ -112,7 +107,7 @@ components:
       name: outlined_card_1_copy
       properties: {background: 'theme:Secondary Container', role: elevated-card}
       type: ColumnPanel
-    layout_properties: {grid_position: 'RBCWIU,QASPLX'}
+    layout_properties: {grid_position: 'TVCGWZ,XIXEAY'}
     name: column_panel_1
     properties: {}
     type: ColumnPanel
@@ -125,7 +120,7 @@ components:
     - event_bindings: {click: lagre_skritt_click}
       layout_properties: {}
       name: lagre_skritt
-      properties: {role: filled-button, text: Lagre}
+      properties: {role: filled-button, text: Jeg har gått minst 8000 skritt i dag}
       type: Button
     layout_properties: {grid_position: 'JDJKYU,DKDGBP'}
     name: skritt_panel_2
@@ -140,7 +135,7 @@ components:
     - event_bindings: {click: lagre_trening_button_click}
       layout_properties: {}
       name: lagre_trening_button
-      properties: {align: right, role: filled-button, text: Lagre}
+      properties: {align: right, role: filled-button, text: Lagre trening}
       type: Button
     layout_properties: {grid_position: 'LDAPRP,OKEEXD'}
     name: trening_panel_2
