Created treninger.png; Edited PoengVelger

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -17,6 +17,7 @@ unique_ids:
     relax.png: '1743409632679138225943962.50644'
     standard-page.html: FWNBRYTQ5FYKRMFR5TQCDTKGH36EROKJ
     theme.css: 4XELZEEUTVXOLQDXMJPQ3IRQPNKSRQ3I
+    treninger.png: '1745229229690422321644285.8255'
     walking.svg: '1743356575598423980038540.64557'
   forms:
     AI_logg: '1745058232084277297617499.1085'
