--- a/anvil.yaml
+++ b/anvil.yaml
@@ -116,6 +116,14 @@ db_schema:
       type: bool
     server: full
     title: Konkurranse
+  leages:
+    client: none
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: leage
+      type: string
+    server: full
+    title: leages
   ny_aktivitet:
     client: search
     columns:
