--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -62,6 +62,10 @@ components:
           name: label_1
           properties: {text: 'Deltager:', visible: false}
           type: Label
+        - layout_properties: {}
+          name: leage_ikon
+          properties: {font_size: 18, text: ''}
+          type: Label
         - components: []
           event_bindings: {click: deltager_label_click}
           layout_properties: {}
