--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -24,16 +24,6 @@ components:
       - {data_key: column_1, id: PFFFKV, title: Utmerkelser}
     type: DataGrid
   - components:
-    - layout_properties: {grid_position: 'QGWPOY,PWVMAI'}
-      name: label_2
-      properties:
-        align: center
-        font_size: 8
-        spacing:
-          margin: ['0', null, '0', null]
-          padding: ['0', null, '0', null]
-        text: Klikk på øyet for å se en persons aktiviteter
-      type: Label
     - layout_properties: {grid_position: 'FHRIMM,XYECDR'}
       name: label_2_copy
       properties:
@@ -42,7 +32,7 @@ components:
         spacing:
           margin: ['0', null, '0', null]
           padding: ['0', null, '0', null]
-        text: 'Streak er den lengste ssammehnegnende perioden deltageren har registrert aktivitet hver dag. Dagens aktivitet påvirker ikke streak enda. Streak benyttes for å skille mellom deltagere med ellers like mye poeng. '
+        text: 'Streak er den lengste sammehnegnende perioden deltageren har registrert aktivitet hver dag. Dagens aktivitet påvirker ikke streak enda. Streak benyttes for å skille mellom deltagere med ellers like mye poeng. '
       type: Label
     - layout_properties: {grid_position: 'HKNYRD,ECOEGL'}
       name: label_2_copy_2
