--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -129,10 +129,10 @@ components:
         name: badge_5
         properties: {height: '30', source: _/theme/icons8-habit-64 (1).png, tooltip: Habit God, visible: false}
         type: Image
-      - event_bindings: {}
+      - event_bindings: {mouse_down: badge_6_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
         layout_properties: {width: 30}
-        name: image_6
-        properties: {height: '30', source: _/theme/grey badge.png, tooltip: '', visible: false}
+        name: badge_6
+        properties: {height: '30', source: _/theme/icons8-weekend-48.png, tooltip: '', visible: false}
         type: Image
       - event_bindings: {}
         layout_properties: {width: 30}
