--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -86,11 +86,11 @@ components:
     type: Image
   - event_bindings: {mouse_down: badge_6_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
     layout_properties: {width: 16.5}
-    name: image_6
-    properties: {height: '20', source: _/theme/icons8-weekend-48.png, tooltip: '', visible: false}
+    name: badge_6
+    properties: {height: '20', source: _/theme/icons8-weekend-48.png, tooltip: Weekend Warrior, visible: false}
     type: Image
   - layout_properties: {width: 19}
-    name: image_7
+    name: badge_7
     properties: {height: '20', source: _/theme/grey badge.png, tooltip: '', visible: false}
     type: Image
   layout_properties: {column: PFFFKV}
