--- a/client_code/Regler/form_template.yaml
+++ b/client_code/Regler/form_template.yaml
@@ -48,13 +48,13 @@ components:
       name: label_1_copy_copy
       properties: {role: display, text: Poengberegning}
       type: Label
-    - layout_properties: {grid_position: 'RLCWOS,WCNFUE'}
+    - layout_properties: {grid_position: 'QSCRAV,MSCIXK'}
       name: text_area_3_copy
       properties:
         enabled: false
         foreground: black
-        height: 246.88885498046875
-        text: "Skritt\nHvis du har skritteller og den viser 8000 skritt på en dag kan du få ett poeng. Hvis du går lengre enn 8000 skritt på en dag har det ingen innvirkning på poeng. \n\nTreningsøkter\nHvis du registrerer annen form for trening kan du ikke registrere poeng for skritt. Du kan få ett poeng for hver halve time med aktiv trening, og maksimalt tre poeng per. dag.\n"
+        height: 448.08331298828125
+        text: "Skritt\nHvis du har skritteller og den viser 8000 skritt på en dag kan du få ett poeng. Hvis du går lengre enn 8000 skritt på en dag har det ingen innvirkning på poeng. \n\nTreningsøkter\nHvis du registrerer annen form for trening kan du ikke registrere poeng for skritt. Du kan få ett poeng for hver halve time med aktiv trening, og maksimalt tre poeng per. dag.\n\nBadges\nBadges blir gitt når du oppfyller kravene til hver enkelt badge. Når du får en abdge får du bonuspoeng. Kraavene til badgene må  du oppdage selv.\n\nLigaer\nDet er 10 ligaer.Etter en uke tildels du en liga etter hvilken score du har. Hver helg går de beste 20 % opp i neste liga, og de dårligse 20% rykker ned. De som rykker opp får bonuspoeng for det.\n\nHvis du synes dette er mye å tenke på kan du bare glemme det. Det går av seg selv når du registrering trenigen og skrittene dine."
       type: TextArea
     - event_bindings: {click: button_1_click}
       layout_properties: {grid_position: 'NPDRUE,NVTGLG'}
