--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -29,20 +29,12 @@ components:
         padding: [null, '2', null, '2']
       text: ''
     type: Button
-  - layout_properties: {}
+  - layout_properties: {width: null}
     name: Deltager_label
     properties:
       spacing:
         margin: ['12', null, '2', null]
         padding: ['2', null, '2', null]
-    type: Label
-  - layout_properties: {}
-    name: email
-    properties:
-      spacing:
-        margin: [0, null, 0, null]
-        padding: [0, null, 0, null]
-      visible: false
     type: Label
   layout_properties: {column: JKSDUP}
   name: flow_panel_2
@@ -93,6 +85,13 @@ components:
     name: badge_7
     properties: {height: '20', source: _/theme/grey badge.png, tooltip: '', visible: false}
     type: Image
+  - name: email
+    properties:
+      spacing:
+        margin: [0, null, 0, null]
+        padding: [0, null, 0, null]
+      visible: false
+    type: Label
   layout_properties: {column: PFFFKV}
   name: badge_flow_panel
   properties: {align: left, visible: true}
