Edited ServerModule1 and minside

--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -60,7 +60,8 @@ components:
       name: flow_panel_5
       properties: {align: center}
       type: FlowPanel
-    - layout_properties: {grid_position: 'ZRMTGO,KNQDXT'}
+    - components: []
+      layout_properties: {grid_position: 'ZRMTGO,KNQDXT'}
       name: rich_text_2_copy
       properties:
         align: center
@@ -83,14 +84,20 @@ components:
         properties: {align: left, text: 'Opprett nytt team:'}
         type: Label
       - event_bindings: {pressed_enter: nytt_team_pressed_enter}
+        layout_properties: {}
         name: nytt_team
-        properties: {placeholder: Skriv teamnavn + Enter, text: ''}
+        properties: {placeholder: Skriv teamnavn, text: ''}
         type: TextBox
       layout_properties: {grid_position: 'LRBETL,MQHJIR'}
       name: flow_panel_6
       properties: {align: center}
       type: FlowPanel
-    - layout_properties: {grid_position: 'CVKDBZ,ADCFII'}
+    - components:
+      - event_bindings: {click: nytt_team_pressed_enter}
+        name: button_1
+        properties: {role: filled-button, text: Opprett team}
+        type: Button
+      layout_properties: {grid_position: 'CVKDBZ,ADCFII'}
       name: rich_text_1
       properties:
         align: center
