--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -19,12 +19,12 @@ components:
       - name: navn_textbox
         properties: {}
         type: TextBox
-      layout_properties: {grid_position: 'XWHENV,QYOYQW'}
+      layout_properties: {grid_position: 'GUEZGH,DUVYCS'}
       name: flow_panel_3
       properties: {align: center}
       type: FlowPanel
     - components: []
-      layout_properties: {grid_position: 'SGATUI,OPBVVQ'}
+      layout_properties: {grid_position: 'BMMPDP,JZFHOE'}
       name: rich_text_2
       properties:
         align: center
@@ -36,11 +36,6 @@ components:
         spacing_above: none
         spacing_below: none
       type: RichText
-    layout_properties: {grid_position: 'KGMMOB,OEIEXU'}
-    name: outlined_card_4
-    properties: {role: outlined-card}
-    type: ColumnPanel
-  - components:
     - components:
       - name: label_3
         properties: {text: 'Medlem av team:', visible: true}
@@ -73,6 +68,21 @@ components:
         spacing_above: none
         spacing_below: none
       type: RichText
+    - components:
+      - event_bindings: {click: angre_button_click}
+        layout_properties: {}
+        name: angre_button
+        properties: {role: filled-button, text: Angre}
+        type: Button
+      - event_bindings: {click: lagre_button_click}
+        layout_properties: {}
+        name: lagre_button
+        properties: {role: filled-button, text: Lagre}
+        type: Button
+      layout_properties: {grid_position: 'XPDUEN,DKHMMN'}
+      name: flow_panel_4
+      properties: {align: center}
+      type: FlowPanel
     layout_properties: {grid_position: 'HEYYWW,CQSZEU'}
     name: outlined_card_2
     properties: {role: elevated-card}
@@ -113,21 +123,6 @@ components:
     name: outlined_card_3
     properties: {role: elevated-card}
     type: ColumnPanel
-  - components:
-    - event_bindings: {click: angre_button_click}
-      layout_properties: {}
-      name: angre_button
-      properties: {role: filled-button, text: Angre}
-      type: Button
-    - event_bindings: {click: lagre_button_click}
-      layout_properties: {}
-      name: lagre_button
-      properties: {role: filled-button, text: Lagre}
-      type: Button
-    layout_properties: {grid_position: 'CFCNYK,IRXSOD'}
-    name: flow_panel_4
-    properties: {align: center}
-    type: FlowPanel
   layout_properties: {grid_position: 'UDUTJU,XUHONA'}
   name: outlined_card_1
   properties: {role: outlined-card}
