--- a/anvil.yaml
+++ b/anvil.yaml
@@ -224,6 +224,12 @@ db_schema:
       name: leage
       target: leages
       type: link_single
+    - admin_ui: {order: 9, width: 200}
+      name: poeng
+      type: number
+    - admin_ui: {order: 10, width: 200}
+      name: score
+      type: number
     server: full
     title: userinfo
   users:
