--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -151,6 +151,10 @@ components:
     name: trening_panel_2
     properties: {align: right, visible: false}
     type: FlowPanel
+  - layout_properties: {grid_position: 'AEMCDZ,UXZYTX'}
+    name: skrittf_box
+    properties: {text: check_box_1, visible: false}
+    type: CheckBox
   layout_properties: {grid_position: 'EKYBVU,PBCROG'}
   name: outlined_card_1
   properties: {background: 'theme:Secondary Container', col_widths: '{"OKEEXD":30}', role: outlined-card}
