--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -3,12 +3,17 @@ components:
   - components:
     - layout_properties: {grid_position: 'WNEDIZ,WTMWPC'}
       name: label_1
-      properties: {align: center, role: headline, text: Individuell resultatliste}
+      properties: {align: center, role: headline, text: 'Poengstilling Individuell '}
       type: Label
     layout_properties: {grid_position: 'FWQDZV,ILXBQB'}
     name: column_panel_1
     properties: {}
     type: ColumnPanel
+  - event_bindings: {click: button_1_click}
+    layout_properties: {grid_position: 'EXHGXJ,AEWIPX'}
+    name: button_1
+    properties: {role: filled-button, text: 'Poengstilling Team '}
+    type: Button
   - components:
     - layout_properties: {}
       name: resultat_repeat_panel
