--- a/client_code/Supertrekning/form_template.yaml
+++ b/client_code/Supertrekning/form_template.yaml
@@ -1,9 +1,18 @@
 components:
 - components:
+  - layout_properties: {grid_position: 'EJKNUX,VNKSUI'}
+    name: label_2
+    properties: {align: center, role: headline, text: Supertrekning}
+    type: Label
   - layout_properties: {grid_position: 'MTSGUN,FHFTBQ'}
     name: label_1
     properties: {align: center, text: Dette er de som har kvalifisert seg til alle trekninger frem til nå}
     type: Label
+  - event_bindings: {click: button_1_click}
+    layout_properties: {grid_position: 'DTVTUE,HQESJB'}
+    name: button_1
+    properties: {role: filled-button, text: Trekning}
+    type: Button
   - components:
     - name: trekningsliste_repeating_panel
       properties: {item_template: Trekninger.RowTemplate3}
