--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -52,7 +52,8 @@ unique_ids:
     minside: '1743231868673803453047787.4751'
     team_medlemmer: '1742417549733112967066025.23576'
     team_medlemmer.RowTemplate4: '1742417606431323896215273.31647'
-  modules: {}
+  modules:
+    Globals: '1745434925690579308358414.0474'
   scripts: {}
   server_modules:
     ServerModule1: '1741208220179582550843168.9172'
