--- a/anvil.yaml
+++ b/anvil.yaml
@@ -45,7 +45,7 @@ db_schema:
     - admin_ui: {width: 200}
       name: ikon_path
       type: string
-    - admin_ui: {width: 200}
+    - admin_ui: {order: 4, width: 315}
       name: ikon
       type: media
     - admin_ui: {width: 200}
