--- a/anvil.yaml
+++ b/anvil.yaml
@@ -270,13 +270,15 @@ dependencies:
   version: {version_tag: v1.2.3}
 metadata: {description: For Framo BIL, logo_img: 'asset:walking.svg', title: Framskritt}
 name: Aktivitet
+native_deps: null
 package_name: Aktivitet
 renamed: true
 runtime_options:
   client_version: '3'
+  legacy_features: {__dict__: true, bootstrap3: true, class_names: true, root_container: true}
   server_spec: {base: python310-standard}
   server_version: python3-sandbox
-  version: 2
+  version: 3
 scheduled_tasks:
 - job_id: GGPDYCYJ
   task_name: nightly_streak_recalc
